[metadata]
name = sconstool_nbconvert
version = 0.0.1
author = spielhuus
author_email = spielhuus@gmail.com
description = SCons tool for Jupyter notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spielhuus/sconstool-nbconvert
project_urls =
    Bug Tracker = https://github.com/spielhuus/sconstool-nbconvert/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

install_requires =
    matplotlib
    numpy
    ipython
    notebook
    scons

[options.packages.find]
where = src

